--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,16 @@
 name = "d-rs"
 version = "0.1.0"
 edition = "2021"
+description = "stream processing utilities for the command line"
+authors = ["Jonathan Dönszelmann <jonabent@gmail.com>"]
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap={version="3.1.18", features=["cargo", "unstable-multicall"]}
+clap={version= "4.2.4", features=["cargo", "unstable-multicall"]}
 typed-arena = "2.0.1"
 temp-file = "0.1.7"
-fancy-regex = "0.10.0"
+fancy-regex = "0.11.0"
 thiserror = "1.0.31"
 lazy_static = "1.4.0"
