--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap={version= "4.2.4", features=["cargo"]}
+clap={version= "3", features=["cargo", "unstable-multicall"]}
 typed-arena = "2.0.1"
 temp-file = "0.1.7"
 fancy-regex = "0.11.0"
