--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
 name = "d-rs"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 description = "stream processing utilities for the command line"
 authors = ["Jonathan Dönszelmann <jonabent@gmail.com>"]
 license = "MIT"
+
+[[bin]]
+name = "d"
+path = "src/main.rs"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
